# rust-discid

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: build.yml
examples/: discfromtoc.rs  discidinfo.rs  parsetoc.rs  readdiscid.rs  readisrcs.rs
src/: lib.rs
