[package]
name = "discid"
version = "0.4.1"
authors = ["Philipp Wolfer <ph.wolfer@gmail.com>"]
edition = "2018"
description = "Bindings for MusicBrainz libdiscid"
repository = "https://github.com/phw/rust-discid"
readme = "README.md"
keywords = ["musicbrainz", "discid", "audio", "bindings"]
categories = ["api-bindings"]
license = "LGPL-3.0-or-later"

[badges]
travis-ci = { repository = "phw/rust-discid" }

[dependencies]
bitflags = "1.0.4"
discid-sys = "0.2.0"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
